Archive/28b8512c01e8b09e0c477a008e51b8d7-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp:2:52: error: expected template-name before ‘<’ token
 struct TUtf16TextEncoding : public TextEncodingUnit<TChar16, 2> {
                                                    ^
main.cpp:2:52: error: expected ‘{’ before ‘<’ token
main.cpp:2:52: error: expected unqualified-id before ‘<’ token
